[package]
authors = ["your e-mail here"]
categories = ["embedded", "hardware-support", "no-std"]
description = "your description here"
license = "your license here"
keywords = ["arm", "cortex-m", "nrf52", "hal"]
name = "your_application_name"
version = "0.0.1"
edition = "2018"

[dependencies]
nrf52840-hal = "0.15.1"
embedded-hal = "0.2.7"
#adafruit-clue = { git = "https://github.com/neufeldm/adafruit-clue", branch = "s140version", features = ["nrf-s140-v6"] }
#adafruit-clue = { git = "https://github.com/neufeldm/adafruit-clue", branch = "s140version", features = ["nrf-s140-v7"] }
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"] }
cortex-m-rt = ">=0.6, <0.8"
nb = "1.0.0"
shared-bus = "0.2.4"
heapless = "0.7.9"
# screen
embedded-graphics = "0.7"
st7789 = "0.6.1"
display-interface = "0.4"
display-interface-spi = "0.4"
# gyro/accel
lsm6ds33 = "0.3.0"
# magnetometer
lis3mdl = { git = "https://github.com/ryanrightmer/lis3mdl" }
# prox/gesture/light
apds9960 = "0.1.0"
# humidity
sht3x = { git = "https://github.com/reitermarkus/sht3x-rs" }
# temp/pressure
bmp280-rs = "0.1.1"
# usb
usb-device = "0.2.9"
usbd-serial = "0.1.1"

[features]
rt = ["nrf52840-hal/rt"]
default = ["rt"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
